<resources>

    <string name="app_name">SaluteContatos</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_contato">Salute Contatos</string>
    <string name="bt_novo_contato">Novo Contato</string>
    <string name="contato_nome">Nome</string>
    <string name="contato">Contato</string>
    <string name="contato_email">E-mail</string>
    <string name="contato_telefone">Telefone</string>
    <string name="bt_cap_foto">Capiturar Foto</string>
    <string name="bt_salvar">Salvar</string>
    

</resources>