<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/labelNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contato_nome" />

    <EditText
        android:id="@+id/editNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/labelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contato_email" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/labelTelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contato_telefone" />

    <EditText
        android:id="@+id/editTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btCapFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="capturarFoto"
            android:text="@string/bt_cap_foto" />

        <Button
            android:id="@+id/btSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="salvar"
            android:text="@string/bt_salvar" />
    </LinearLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="219dp"
        android:layout_height="235dp"
        android:layout_gravity="center"
        android:layout_weight="0.92"
        android:src="@drawable/ic_action_search" />

</LinearLayout>